@@ -1,7 +1,12 @@
+2008-07-13  Tomas Mraz <t8m@centrum.cz>
+
+	* modules/pam_mail/pam_mail.8.xml: Module supports session and
+	not account service (#1980773).
+
 2008-07-11  Tomas Mraz <t8m@centrum.cz>
 
 	* modules/pam_unix/pam_unix_acct.c (_unix_run_verify_binary): Do
-	not close the pipe descriptor in borderline case (#2009766)
+	not close the pipe descriptor in borderline case (#2009766).
 	* modules/pam_unix/pam_unix_passwd.c (_unix_run_update_binary):
 	Likewise.
 	* modules/pam_unix/support.c (_unix_run_helper_binary): Likewise.
